Bidireccionalidad WSAG - iAgree 100% (a excepcion de pequeños detalles: compensations, context, ...)
This commit refs: #649